# autolabor_simulation

./: .gitignore  README.md
autolabor_description/: package.xml  urdf.rviz
autolabor_description/launch/: display.launch
autolabor_description/urdf/: autolabor_description.urdf  autolabor_mini.urdf  autolabor_pro1_box_suit.urdf  autolabor_pro1_track_suit.urdf
autolabor_fake/: CMakeLists.txt  package.xml
autolabor_fake/include/autolabor_fake/: autolabor_fake.h
autolabor_fake/src/: autolabor_fake.cpp  autolabor_fake_node.cpp  autolabor_fake_node.cpp.bak
autolabor_keyboard_control/src/: keyboard_control_node.cpp
autolabor_simulation_base/: CMakeLists.txt  package.xml
autolabor_simulation_base/include/autolabor_simulation_base/: simulation_base_node.h
autolabor_simulation_base/launch/: demo_simulation_base.launch  simulation_base.launch
autolabor_simulation_base/script/: autolabor_teleop.py
autolabor_simulation_base/src/: simulation_base_node.cpp
autolabor_simulation_lidar/: CMakeLists.txt  package.xml
autolabor_simulation_lidar/include/autolabor_simulation_lidar/: simulation_lidar_node.h
autolabor_simulation_lidar/launch/: simulation_lidar.launch
autolabor_simulation_lidar/src/: simulation_lidar_node.cpp
autolabor_simulation_location/: CMakeLists.txt  package.xml
autolabor_simulation_location/include/autolabor_simulation_location/: simulation_location_node.h
autolabor_simulation_location/src/: simulation_location_node.cpp
autolabor_simulation_object/: CMakeLists.txt  package.xml
autolabor_simulation_object/include/autolabor_simulation_object/: simulation_object_node.h
autolabor_simulation_object/launch/: simulation_object.launch
autolabor_simulation_object/src/: simulation_object_node.cpp
autolabor_simulation_stage/: CMakeLists.txt  package.xml
autolabor_simulation_stage/include/autolabor_simulation_stage/: simulation_stage_node.h
autolabor_simulation_stage/launch/: simulation_stage.launch
autolabor_simulation_stage/map/: MG_map.yaml
autolabor_simulation_stage/src/: simulation_stage_node.cpp
doc/: Makefile  make.bat
doc/source/: .sphinx-server.yml  autolabor_simulation_base.rst  conf.py  getting_start.rst  index.rst  tf_coordinate_introduction.rst
doc/source/_build/html/: .buildinfo  autolabor_simulation_base.html  genindex.html  getting_start.html  index.html  objects.inv  search.html  searchindex.js  tf_coordinate_introduction.html
doc/source/_build/html/.doctrees/: autolabor_simulation_base.doctree  environment.pickle  getting_start.doctree  index.doctree  tf_coordinate_introduction.doctree
doc/source/_build/html/_images/: rviz_5.apng
doc/source/_build/html/_sources/: getting_start.rst.txt  index.rst.txt  tf_coordinate_introduction.rst.txt
doc/source/_build/html/_static/: documentation_options.js
global_location_fusion/: CMakeLists.txt  package.xml
global_location_fusion/src/: simple_fusion.cpp
lidar_simulation/: CMakeLists.txt  package.xml
lidar_simulation/include/lidar_simulation/: lidar_simulation.h  obstacle_simulation.h  static_map.h
lidar_simulation/launch/: obstacle.launch
lidar_simulation/map/: custom.yaml
lidar_simulation/src/: lidar_simulation.cpp  obstacle_simulation.cpp  static_map.cpp
lidar_simulation/srv/: Obstacle.srv
location_fusion/: CMakeLists.txt  package.xml
location_fusion/include/global_location_fusion/: simple_fusion.h
location_fusion/src/: simple_fusion.cpp
loop_path_planner/: CMakeLists.txt  global_planner_plugins.xml  package.xml
loop_path_planner/include/loop_path_planner/: loop_path_planner.h
loop_path_planner/src/: loop_path_planner.cpp
path_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
path_rviz_plugin/include/path_rviz_plugin/: path_rviz_plugin.h
path_rviz_plugin/src/: path_rviz_plugin.cpp
path_server/: CMakeLists.txt  package.xml
path_server/include/load_path/: load_path_node.h
path_server/include/record_path/: record_path_node.h
path_server/path_data/: default_path.path  loop_8.path  loop_for.path  path.txt  simulation_path.path
path_server/src/: load_path_node.cpp  record_path_node.cpp
path_server/srv/: SetPathName.srv
record_path_planner/: CMakeLists.txt  global_planner_plugins.xml  package.xml
record_path_planner/include/record_path_planner/: record_path_planner.h
record_path_planner/src/: record_path_planner.cpp
simulation_launch/: CMakeLists.txt  package.xml
simulation_launch/launch/: gmapping_navigation.launch  hector_navi.launch  lidar_sim.launch  location_test.launch  minimal_bringup.launch  move_base_simulation.launch  teb_loop_move_base_simulation.launch  teb_loop_move_base_simulation_object.launch  teb_move_base_simulation.launch  without_tf.launch
simulation_launch/map/: blank.yaml
simulation_launch/param/: dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  move_base_params.yaml
simulation_launch/rviz/: autolabor.rviz  hector_navigation.rviz  minimal_bringup.rviz  without_tf.rviz
simulation_launch/track_param/: dwa_local_planner_params.yaml  local_costmap_params.yaml  local_planner_params.yaml  loop_path_global_planner_params.yaml  move_base_params.yaml  record_path_global_planner_params.yaml  teb_local_planner_params.yaml  teb_loop_move_base_params.yaml  teb_move_base_params.yaml
