<?xml version="1.0"?>
<package>
  <name>autolabor_simulation_lidar</name>
  <version>0.0.1</version>
  <description>
    This package provide a single-line laser scan simulation attach to given
    frame. It's a absolutely necessary part for a simulation with SLAM system
  </description>

  <maintainer email="shichunguo@gmail.com">Colin</maintainer>

  <license>MIT</license>

  <author >Colin</author>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
