<?xml version="1.0"?>
<package>
  <name>autolabor_simulation_object</name>
  <version>0.0.1</version>
  <description>The autolabor_simulation_object package</description>

  <maintainer email="shichunguo@gmail.com">Colin</maintainer>

  <license>MIT</license>

  <author >Colin</author>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>interactive_markers</build_depend>
  <run_depend>interactive_markers</run_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>visualization_msgs</run_depend>
  <build_depend>autolabor_simulation_stage</build_depend>
  <run_depend>autolabor_simulation_stage</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
