<?xml version="1.0"?>
<package>
  <name>autolabor_simulation_stage</name>
  <version>0.0.1</version>
  <description>The autolabor_simulation_stage package</description>

  <maintainer email="shichunguo@gmail.com">Colin</maintainer>

  <license>MIT</license>

  <author >Colin</author>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
